Fix misaligned Delete Presentation modal buttons (#1464)
[stage-1]

--- a/web/scss/sections/template-editor-layout.scss
+++ b/web/scss/sections/template-editor-layout.scss
@@ -926,8 +926,10 @@ $short-phone-height: 570px;
   }
 
   @media (max-width: 767px) {
-    [class*="col-"]:not(:first-child) {
-      margin-top: 5px;
+    .col-spacing-on-sm {
+      [class*="col-"]:not(:first-child) {
+        margin-top: 5px;
+      }
     }
   }
 
